# p2p

./: LICENSE  README.md  Untitled.ipynb  pyproject.toml
.ipynb_checkpoints/: XGBr prob_default-checkpoint.ipynb  XGboost-checkpoint.ipynb  kruskal wallis test-checkpoint.ipynb  p2p_ebm-checkpoint.ipynb
models/.ipynb_checkpoints/: p2p_lgb_cls-checkpoint.ipynb
models/regression/: p2p_lgb_reg.joblib  p2p_xgb_reg.joblib
notebooks/: EDA & preprocessing.ipynb  p2p_lgb_reg.ipynb
notebooks/.ipynb_checkpoints/: EDA & preprocessing-checkpoint.ipynb  p2p_ebm_reg-checkpoint.ipynb  p2p_lgb_reg-checkpoint.ipynb  p2p_xgb_cls-checkpoint.ipynb  p2p_xgb_reg-checkpoint.ipynb
notebooks/classification/: p2p_ebm_cls.ipynb  p2p_lgb_cls.ipynb  p2p_xgb_cls.ipynb
notebooks/classification/.ipynb_checkpoints/: p2p_lgb_cls-checkpoint.ipynb  p2p_rf_cls-checkpoint.ipynb
notebooks/regression/: p2p_lgb_reg.ipynb  p2p_xgb_reg.ipynb
notebooks/regression/.ipynb_checkpoints/: p2p_rf_reg-checkpoint.ipynb
visuals/: ratings metrics.xlsx
visuals/classification/: feature imp classification.txt
visuals/regression/: feature importance regression.txt
