[tool.poetry]
name = "p2p"
version = "0.1.0"
description = ""
authors = ["SarrangTech <bathalapalli9920@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
pandas = "^2.2.2"
matplotlib = "^3.8.4"
scikit-learn = "^1.4.2"
imblearn = "^0.0"
xgboost = "^2.0.3"
lightgbm = "^4.3.0"
statsmodels = "^0.14.2"
shap = "^0.45.0"
interpret = "^0.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
